Bug 155676 - Editing FontsUseWinMetrics in Expert Configuration dialog breaks it
Summary: Editing FontsUseWinMetrics in Expert Configuration dialog breaks it
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0
Keywords:
Depends on:
Blocks: Fonts Options-Dialog-Expert
  Show dependency treegraph
 
Reported: 2023-06-04 20:47 UTC by Khaled Hosny
Modified: 2024-01-15 01:46 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Khaled Hosny 2023-06-04 20:47:18 UTC
Open Expert Configuration dialog, search for FontsUseWinMetrics, edit it but don’t necessarily change anything, save. Close LibreOffice and open again and try one of the fonts set in FontsUseWinMetrics, notice that now the undesired line metrics are used.

I believe this is because of the use of comma as a separator, since the setting type is oor:string-list which seems to be configured by the dialog as a comma separated list, so when saving back:

<it>Celticmd,1571,-567,1571,-547,2126,559</it>

becomes

<it>Celticmd</it><it>1571</it><it>-567</it><it>1571</it><it>-547</it><it>2126</it><it>559</it>
Comment 1 Commit Notification 2023-06-05 06:42:58 UTC
Khaled Hosny committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a38e1537cd06367783a43cc8d3b0e8d674b6e142

tdf#155676: Use colon in FontsUseWinMetrics config key

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 Commit Notification 2023-06-05 14:54:57 UTC
خالد حسني committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/6014fd047a62e1a002cc27334e39e1d2e54e342f

Revert "tdf#155676: Use colon in FontsUseWinMetrics config key"

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2023-12-04 16:43:42 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/1597968f5cd2534fb6e0be40fafecc305a004f4e

tdf#155676 Properly support editing string lists

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.