tdf#155676: Use colon in FontsUseWinMetrics config key

The use of comma breaks editing in Expert Configuration dialog, so users
effectively can’t use this.

After editing

<it>Celticmd,1571,-567,1571,-547,2126,559</it>

becomes

<it>Celticmd</it><it>1571</it><it>-567</it><it>1571</it><it>-547</it><it>2126</it><it>559</it>

Using colon instead of comma seems to fix this.

Change-Id: I4bba26fe9d94a33e62a0d34c3324daae0845c30b
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152597
Tested-by: Jenkins
Reviewed-by: Samuel Mehrbrodt <samuel.mehrbrodt@allotropia.de>
Reviewed-by: خالد حسني <khaled@libreoffice.org>